# agents

./: README.md  pyproject.toml
crew_ai/coder/output/: code_and_output.txt
crew_ai/coder/src/coder/: crew.py  main.py
crew_ai/coder/src/coder/config/: tasks.yaml
crew_ai/debate/output/: decide.md  oppose.md  propose.md
crew_ai/debate/src/debate/: crew.py  main.py
crew_ai/debate/src/debate/config/: agents.yaml  tasks.yaml
crew_ai/engineering_team/: pyproject.toml
crew_ai/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
crew_ai/engineering_team/src/engineering_team/: crew.py  main.py
crew_ai/engineering_team/src/engineering_team/config/: agents.yaml
crew_ai/financial_researcher/output/: report.md
crew_ai/financial_researcher/src/financial_researcher/: crew.py  main.py
crew_ai/financial_researcher/src/financial_researcher/config/: agents.yaml
crew_ai/stock_picker/output/: decision.md  research_report.json  trending_companies.json
crew_ai/stock_picker/src/stock_picker/: crew.py  main.py
crew_ai/stock_picker/src/stock_picker/tools/: push_tool.py
data/resume/: summary.txt
langraph/: check_pointing.ipynb  checkpoints.db-shm  checkpoints.db-wal  practice.ipynb  tool_calling.ipynb
openai_sdk/: README.md  agen.ipynb  agent.ipynb  deep_research_agent.ipynb  guardrails.ipynb  handoffs.ipynb  requirements.txt  scraper.py  wwp.ipynb
openai_sdk/deep_research/: assistant_agent.py  deep_research.py  notifications_agent.py  planner_agent.py  research_manager.py  researcher_agent.py
resume_conversation/: README.md  agent.ipynb  tool_calling.ipynb
tools_resume_converstaion/: README.md  app.py  tool_calling.ipynb
