[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brevo-python>=1.2.0",
    "crewai>=0.157.0",
    "crewai-tools>=0.62.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "gradio>=5.41.0",
    "openai>=1.99.1",
    "openai-agents>=0.2.4",
    "pypdf>=5.9.0",
    "requests>=2.32.4",
    "sib-api-v3-sdk>=7.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
