[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brevo-python>=1.2.0",
    "crewai>=0.157.0",
    "crewai-tools>=0.62.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-api-python-client>=2.179.0",
    "gradio>=5.41.0",
    "ipywidgets>=8.1.7",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.2.14",
    "langgraph>=0.6.6",
    "langsmith>=0.3.45",
    "openai>=1.99.1",
    "openai-agents>=0.2.4",
    "pypdf>=5.9.0",
    "requests>=2.32.4",
    "sib-api-v3-sdk>=7.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
